tdf#85470 FILESAVE Very long time spent saving XLSX as XLS

This takes the saving from (very long time, I lost patience), to around
2s on my machine.

Change-Id: Ife28a1616c0da65070f7e604b256134156af0e9a
Reviewed-on: https://gerrit.libreoffice.org/72123
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>